--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,44 @@ body {
   padding: 20px;
 }
 
-.hidden {
+/*.hidden {
   display: none;
 }
-
-input {
+*/
+#box1{
+  display: inline-flex;
+  justify-content: center;
+  align-items: middle;
+}
+#box2{
+  flex: 0.25;
+  display: flex;
+  justify-content: center;
+  align-items: middle;
+  padding: 20px;
+}
+#makeRoomBtn{
+  height: 50px;
+  flex: 1;
+}
+.join{
+  flex: 1;
+}
+#roomCodeInput{
+  width: 40%;
+}
+#nameInput {
   width: 80%;
   padding: 16px;
-  font-size: 18px;
+  border-radius: 12px;
+  border: none;
+  margin: 8px 0;
+  margin-bottom: 20px;
+}
+
+#roomCodeInput {
+  width: 80%;
+  padding: 16px;
   border-radius: 12px;
   border: none;
   margin: 8px 0;
@@ -28,12 +58,19 @@ input {
 button {
   width: 50%;
   padding: 10px;
-  font-size: 18px;
+  font-size: 16px;
   border-radius: 12px;
   border: none;
   margin: 8px 0;
-}
+  font-family: arial, sans-serif;
+  color:#292929;
 
+}
+input{
+  font-family: arial, sans-serif;
+    font-size: 15px;
+
+}
 .card {
   background: rgb(227, 227, 227);
   color: black;
